# django_online_blog

./: .gitignore  README.md  pyproject.toml
online_blog/: manage.py
online_blog/blog/: admin.py  forms.py  models.py  urls.py  views.py
online_blog/blog/migrations/: 0001_initial.py  0002_initial.py  0003_tag_autor_id.py  0004_remove_tag_autor_id.py  0005_review.py  0006_alter_review_unique_together.py
online_blog/blog/templates/blog/: post_form.html  posts.html  single_post.html
online_blog/online_blog/: asgi.py  settings.py  urls.py  wsgi.py
online_blog/templates/: delete_template.html  main.html  navbar.html
online_blog/users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
online_blog/users/migrations/: 0001_initial.py  0002_profile_username.py  0003_categories_autor_id.py  0004_remove_profile_categories.py
online_blog/users/templates/users/: account.html  autor_signup.html  categori_form.html  login.html  profile_form.html  profiles.html  reader_signup.html  signup.html  user_profile.html
